--- a/resources/css/app.scss
+++ b/resources/css/app.scss
@@ -1,5 +1,6 @@
 @use "./_defaults";
-@use "./_base" as *;
+@use "./_colors" as *;
+@use "./_text" as *;
 
 /* For mobile phones: */
 body {
@@ -12,41 +13,28 @@ body {
     flex-direction: column;
     justify-content: center;
     align-items: center;
+}
 
-    header {
-        width: 95%;
-        height: 500px;
-        background-color: $background-primary;
-    }
-
-    main {
-        width: 95%;
-        height: 500px;
-        background-color: $background-primary;
-    }
-
-    footer {
-        width: 95%;
-        background-color: $background-primary;
-    }
+header, main, footer {
+    width: 95%;
+    height: 500px;
+    background-color: $background-primary;
 }
 
 /* For desktop: */
 @media only screen and (min-width: 768px) {
-    body {
-        header {
-            width: 100%;
-            max-width: 2000px;
-        }
-        
-        main {
-            width: 100%;
-            max-width: 2000px;
-        }
+    header, main, footer {
+        width: 100%;
+        max-width: 2000px;
+    }
 
-        footer {
-            width: 100%;
-            max-width: 2000px;
+    header {
+        display: flex;
+        justify-content: space-between;
+
+        #logo img {
+            width: 75px;
+            height: auto;
         }
     }
 }
