--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -153,8 +153,8 @@ textarea {
 /* For mobile phones: */
 body {
   background-color: rgb(12, 21, 37);
-  width: 100vw;
-  max-width: 100vw;
+  width: 100%;
+  max-width: 100%;
   overflow-x: hidden;
   display: flex;
   flex-direction: column;
@@ -163,6 +163,7 @@ body {
 }
 
 header, main, footer {
+  padding: 0 30px;
   width: 95%;
   height: 500px;
   background-color: rgb(8, 14, 24);
