--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -150,28 +150,45 @@ textarea {
     scroll-behavior: auto !important;
   }
 }
-/* For mobile phones: */
 body {
   background-color: rgb(12, 21, 37);
   width: 100%;
   max-width: 100%;
   overflow-x: hidden;
+  font-family: sans-serif;
   display: flex;
   flex-direction: column;
-  justify-content: center;
   align-items: center;
 }
 
 header, main, footer {
-  padding: 0 30px;
   width: 95%;
-  height: 500px;
+  padding: 20px 10px;
   background-color: rgb(8, 14, 24);
+  box-sizing: border-box;
 }
 
+/* For mobile phones: */
+@media only screen and (max-width: 767px) {
+  header {
+    display: flex;
+    justify-content: space-between;
+    border-radius: 5px 5px 0 0;
+  }
+  header #logo img {
+    width: 60px;
+  }
+  header #logo span {
+    display: none;
+  }
+  footer {
+    border-radius: 0 0 5px 5px;
+  }
+}
 /* For desktop: */
 @media only screen and (min-width: 768px) {
   header, main, footer {
+    padding: 20px 50px;
     width: 100%;
     max-width: 2000px;
   }
@@ -179,8 +196,37 @@ header, main, footer {
     display: flex;
     justify-content: space-between;
   }
+  header #logo {
+    position: relative;
+    width: 150px;
+    height: auto;
+    display: inline-block;
+    text-decoration: none;
+    overflow: hidden;
+  }
   header #logo img {
+    display: block;
     width: 75px;
     height: auto;
+  }
+  header #logo span {
+    display: block;
+    position: absolute;
+    bottom: -3px;
+    left: -100%;
+    transform: translateY(-50%);
+    white-space: nowrap;
+    color: #2899E5;
+    font-weight: 700;
+    padding: 5px 10px;
+    font-size: 16px;
+    opacity: 0;
+    transition: left 1s ease, opacity 2s ease;
+    transition-delay: 0.5s;
+  }
+  header #logo:hover span {
+    left: 50px;
+    opacity: 1;
+    transition-delay: 0s;
   }
 }/*# sourceMappingURL=app.css.map */
