--- a/resources/css/app.scss
+++ b/resources/css/app.scss
@@ -2,29 +2,61 @@
 @use "./_colors" as *;
 @use "./_text" as *;
 
-/* For mobile phones: */
 body {
     background-color: $background-secondary;
     width: 100%;
     max-width: 100%;
     overflow-x: hidden;
 
+    font-family: $family;
+
     display: flex;
     flex-direction: column;
-    justify-content: center;
     align-items: center;
 }
 
 header, main, footer {
-    padding: 0 30px;
     width: 95%;
-    height: 500px;
+    padding: 20px 10px;
     background-color: $background-primary;
+
+    box-sizing: border-box;
+
+
+}
+
+/* For mobile phones: */
+@media only screen and (max-width: 767px) {
+    header {
+        display: flex;
+        justify-content: space-between;
+        border-radius: 5px 5px 0 0;
+    
+        #logo {
+    
+            img {
+                width: 60px;
+            }
+            span {
+                display: none;
+            }
+        }
+    }
+
+    main {
+
+    }
+
+    footer {
+        border-radius: 0 0 5px 5px;
+    }
+
 }
 
 /* For desktop: */
 @media only screen and (min-width: 768px) {
     header, main, footer {
+        padding: 20px 50px;
         width: 100%;
         max-width: 2000px;
     }
@@ -33,9 +65,41 @@ header, main, footer {
         display: flex;
         justify-content: space-between;
 
-        #logo img {
-            width: 75px;
+        #logo {
+            position: relative;
+            width: 150px;
             height: auto;
+            display: inline-block;
+            text-decoration: none;
+            overflow: hidden;
+            
+            img {
+                display: block;
+                width: 75px;
+                height: auto;
+            }
+
+            span {
+                display: block;
+                position: absolute;
+                bottom: -3px;
+                left: -100%; 
+                transform: translateY(-50%);
+                white-space: nowrap;
+                color: $primary;
+                font-weight: 700;
+                padding: 5px 10px;
+                font-size: 16px;
+                opacity: 0;
+                transition: left 1s ease, opacity 2s ease;
+                transition-delay: 0.5s;
+            }
+            
+        }
+        #logo:hover span {
+            left: 50px;
+            opacity: 1;
+            transition-delay: 0s;
         }
     }
 }
