--- a/resources/css/__colors.scss
+++ b/resources/css/__colors.scss
@@ -2,3 +2,8 @@ $background-test: red;
 
 $background-primary: rgb(8, 14, 24);
 $background-secondary: rgb(12, 21, 37);
+
+$background-blue-light : #2899E5;
+$background-blue-neutral : #1D71B8;
+$background-blue-dark : #15537C;
+
