--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -353,7 +353,6 @@ header, main, footer {
     height: auto;
     display: inline-block;
     text-decoration: none;
-    overflow: hidden;
   }
   header #logo img {
     display: block;
@@ -363,21 +362,75 @@ header, main, footer {
   header #logo span {
     display: block;
     position: absolute;
-    bottom: -3px;
-    left: -100%;
-    transform: translateY(-50%);
+    bottom: 10px;
+    left: 50px;
     white-space: nowrap;
     color: #2899E5;
     font-weight: 700;
     padding: 5px 10px;
     font-size: 16px;
-    opacity: 0;
-    transition: left 1s ease, opacity 2s ease;
-    transition-delay: 0.5s;
   }
-  header #logo:hover span {
-    left: 50px;
+  header .menu {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+  }
+  header .menu #desktop {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+  }
+  header .menu #desktop .desktop-main-nav ul:hover li a {
+    transform: scale(1.1);
+    opacity: 0.2;
+  }
+  header .menu #desktop .desktop-main-nav ul {
+    margin: 0;
+    padding: 0;
+    display: flex;
+  }
+  header .menu #desktop .desktop-main-nav ul li {
+    list-style: none;
+    margin: 0 20px;
+    transition: 0.5s;
+  }
+  header .menu #desktop .desktop-main-nav ul li a {
+    display: block;
+    position: relative;
+    text-decoration: none;
+    padding: 5px;
+    font-size: 18px;
+    font-family: sans-serif;
+    color: white;
+    text-transform: uppercase;
+    transition: 0.5s;
+  }
+  header .menu #desktop .desktop-main-nav ul li a:hover {
+    transform: scale(1.3);
     opacity: 1;
-    transition-delay: 0s;
+    filter: blur(0);
+    text-decoration: none;
+    color: #fff;
+  }
+  header .menu #desktop .desktop-main-nav ul li a:before {
+    content: "";
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background: #1D71B8;
+    transition: 0.5s;
+    transform-origin: right;
+    transform: scaleX(0);
+    z-index: -1;
+  }
+  header .menu #desktop .desktop-main-nav ul li a:hover:before {
+    transition: transform 0.5s;
+    transform-origin: left;
+    transform: scaleX(1);
+  }
+  header .menu #mobile {
+    display: none;
   }
 }/*# sourceMappingURL=app.css.map */
