--- a/resources/css/app.scss
+++ b/resources/css/app.scss
@@ -237,7 +237,6 @@ header, main, footer {
             height: auto;
             display: inline-block;
             text-decoration: none;
-            overflow: hidden;
             
             img {
                 display: block;
@@ -248,24 +247,91 @@ header, main, footer {
             span {
                 display: block;
                 position: absolute;
-                bottom: -3px;
-                left: -100%; 
-                transform: translateY(-50%);
+                bottom: 10px;
+                left: 50px;
                 white-space: nowrap;
                 color: $primary;
                 font-weight: 700;
                 padding: 5px 10px;
                 font-size: 16px;
-                opacity: 0;
-                transition: left 1s ease, opacity 2s ease;
-                transition-delay: 0.5s;
             }
             
         }
-        #logo:hover span {
-            left: 50px;
-            opacity: 1;
-            transition-delay: 0s;
+
+        .menu {
+            display: flex;
+            justify-content: center;
+            align-items: center;
+        }
+
+        .menu #desktop {
+            display: flex;
+            justify-content: center;
+            align-items: center;
+
+            .desktop-main-nav {
+
+                ul:hover li a{
+                    transform:scale(1.1);
+                    opacity:0.2;
+                }
+
+                ul {
+                    margin:0;
+                    padding:0;
+                    display:flex;
+
+                    li {
+                        list-style:none;
+                        margin:0 20px;
+                        transition:0.5s;
+
+                        a {
+                            display: block;
+                            position:relative;
+                            text-decoration:none;
+                            padding:5px;
+                            font-size:18px;
+                            font-family: sans-serif;
+                            color:white;
+                            text-transform:uppercase;
+                            transition:0.5s;
+                        }
+
+                        a:hover{
+                            transform:scale(1.3);
+                            opacity:1;
+                            filter:blur(0);
+                            text-decoration:none;
+                            color:#fff;
+                        }
+
+                        a:before{
+                            content:'';
+                            position:absolute;
+                            top:0;
+                            left:0;
+                            width:100%;
+                            height:100%;
+                            background:$background-blue-neutral;
+                            transition:0.5s;
+                            transform-origin:right;
+                            transform:scaleX(0);
+                            z-index:-1;
+                        }
+
+                        a:hover:before{
+                            transition:transform 0.5s;
+                            transform-origin:left;
+                            transform:scaleX(1);
+                        }
+                    }
+                }
+            }
+        }
+
+        .menu #mobile {
+            display: none;
         }
     }
 }
