Add routes for all pages + implementing nav components for desktop

--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -430,6 +430,9 @@ header, main, footer {
     transform-origin: left;
     transform: scaleX(1);
   }
+  header .menu #desktop .desktop-main-nav ul li a.active {
+    border-bottom: 2px solid white;
+  }
   header .menu #mobile {
     display: none;
   }
