--- a/resources/css/app.scss
+++ b/resources/css/app.scss
@@ -134,6 +134,9 @@ header, main, footer {
                 text-decoration: none;
                 font-weight: bold;
             }
+            .main-nav a.active {
+                border-bottom: 2px solid $background-blue-light;
+            }
 
             .open-main-nav {
                 position: absolute;
