--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -157,9 +157,18 @@ h2,
 h3,
 h4,
 h5,
-h6,
-span {
+h6 {
   color: rgb(246, 246, 246);
+}
+
+span.focus-big {
+  font-weight: 700;
+  color: #2899E5;
+}
+
+span.focus-normal {
+  font-weight: 500;
+  color: #2899E5;
 }
 
 /* For mobile: */
@@ -181,9 +190,15 @@ span {
   }
   h1 {
     font-size: 40px;
+    margin-bottom: 2rem;
+  }
+  h2 {
+    font-size: 28px;
+    margin-bottom: 0.6rem;
   }
   p {
     font-size: 22px;
+    margin-bottom: 0.6rem;
   }
 }
 body {
@@ -474,5 +489,31 @@ header, main, footer {
   }
   header .menu #mobile {
     display: none;
+  }
+  main {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+  }
+  main .banner {
+    display: flex;
+  }
+  main .banner .about-me {
+    max-width: 550px;
+    width: 100%;
+  }
+  main .banner .about-me p.name {
+    color: #1D71B8;
+  }
+  main .banner .my-picture {
+    display: flex;
+    justify-content: end;
+    max-width: 450px;
+    width: 100%;
+    margin-left: 100px;
+  }
+  main .banner .my-picture img {
+    width: 100%;
   }
 }/*# sourceMappingURL=app.css.map */
