--- a/resources/css/app.scss
+++ b/resources/css/app.scss
@@ -340,8 +340,36 @@ header, main, footer {
     }
 
     main {
-        h1 {
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+
+        .banner {
+            display: flex;
             
+            .about-me {
+                max-width: 550px;
+                width: 100%;
+                
+
+                p.name {
+                    color: $secondary;
+                }
+            }
+
+            .my-picture {
+                display: flex;
+                justify-content: end;
+                max-width: 450px;
+                width: 100%;
+                margin-left: 100px;
+
+                img {
+                    width: 100%;
+                    // box-shadow: $background-blue-dark 0px 22px 70px 4px;
+                }
+            }
         }
     }
 }
