--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -179,8 +179,13 @@ span.focus-normal {
   h1 {
     font-size: 30px;
   }
+  h2 {
+    font-size: 24px;
+    margin-bottom: 1rem;
+  }
   p {
     font-size: 18px;
+    margin-bottom: 1rem;
   }
 }
 /* For desktop: */
@@ -385,6 +390,28 @@ header, main, footer {
   }
   header .menu #desktop {
     display: none;
+  }
+  main {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+  }
+  main .banner {
+    display: flex;
+    flex-direction: column;
+  }
+  main .banner .about-me {
+    width: 100%;
+  }
+  main .banner .about-me p.name {
+    color: #1D71B8;
+  }
+  main .banner .my-picture {
+    width: 100%;
+  }
+  main .banner .my-picture img {
+    width: 100%;
   }
   footer {
     border-radius: 0 0 5px 5px;
