Replace logo with animated logo for desktop

--- a/resources/css/__colors.scss
+++ b/resources/css/__colors.scss
@@ -1,7 +1,7 @@
 $background-test: red;
 
-$background-primary: rgb(8, 14, 24);
-$background-secondary: rgb(12, 21, 37);
+$background-primary: #080e18;
+$background-secondary: #0c1525;
 
 $background-blue-light : #2899E5;
 $background-blue-neutral : #1D71B8;
