--- a/resources/css/app.scss
+++ b/resources/css/app.scss
@@ -367,29 +367,45 @@ header, main, footer {
         justify-content: center;
         align-items: center;
 
+        section {
+            margin-top: 50px;
+            margin-bottom: 100px;
+        }
+
         .banner {
             display: flex;
-            
-            .about-me {
-                max-width: 550px;
-                width: 100%;
-                
+            flex-wrap: wrap;
+            justify-content: center;
 
-                p.name {
-                    color: $secondary;
-                }
+            h1 {
+                text-align: center;
+                width: 100%;
             }
 
-            .my-picture {
+            div {
                 display: flex;
-                justify-content: end;
-                max-width: 450px;
-                width: 100%;
-                margin-left: 100px;
-
-                img {
+                .about-me {
+                    max-width: 450px;
                     width: 100%;
-                    // box-shadow: $background-blue-dark 0px 22px 70px 4px;
+                    
+                    p.name {
+                        color: $secondary;
+                    }
+                }
+
+                .my-picture {
+                    display: flex;
+                    justify-content: end;
+                    // max-width: 400px;
+                    width: 100%;
+                    margin-left: 100px;
+    
+                    img {
+                        width: 100%;
+                        height: 100%; 
+                        max-height: 400px;/* Fill the container's height */
+                        object-fit: contain; /* Maintains aspect ratio, potentially crops */
+                    }
                 }
             }
         }
