--- a/resources/css/app.scss
+++ b/resources/css/app.scss
@@ -29,6 +29,9 @@ header, main, footer {
         justify-content: space-between;
         align-items: center;
         border-radius: 5px 5px 0 0;
+        position: sticky;
+        top: 0;
+        z-index: 1000;
     
         #logo.mobile {
             z-index: 50;
@@ -267,6 +270,9 @@ header, main, footer {
     header {
         display: flex;
         justify-content: space-between;
+        position: sticky;
+        top: -30px;
+        z-index: 1000;  
 
         #logo.desktop {
             position: relative;
