--- a/resources/css/app.scss
+++ b/resources/css/app.scss
@@ -224,6 +224,8 @@ header, main, footer {
         section {
             display: flex;
             flex-direction: column;
+            margin-top: 50px;
+            margin-bottom: 100px;
 
             opacity: 0;
             transition: opacity 0.8s;
@@ -239,6 +241,8 @@ header, main, footer {
 
                 p.name {
                     color: $secondary;
+                    background-color: white;
+                    padding: 10px 20px;
                 }
             }
 
@@ -271,7 +275,7 @@ header, main, footer {
         display: flex;
         justify-content: space-between;
         position: sticky;
-        top: -30px;
+        
         z-index: 1000;  
 
         #logo.desktop {
@@ -407,6 +411,8 @@ header, main, footer {
                     
                     p.name {
                         color: $secondary;
+                        background-color: white;
+                        padding: 10px 20px;
                     }
                 }
 
