--- a/resources/css/app.scss
+++ b/resources/css/app.scss
@@ -29,9 +29,9 @@ header, main, footer {
         justify-content: space-between;
         align-items: center;
         border-radius: 5px 5px 0 0;
-        // position: sticky;
-        // top: 0;
-        // z-index: 1000;
+        position: sticky;
+        top: 0;
+        z-index: 1000;
     
         #logo.mobile {
             z-index: 50;
@@ -39,6 +39,7 @@ header, main, footer {
                 width: 60px;
             }
             span {
+                z-index: 50;
                 display: none;
             }
         }
@@ -48,37 +49,125 @@ header, main, footer {
         }
 
         .menu {
-            height: inherit;
-            background-color: red;
+            height: 100%;
+            display: flex;
+            flex-direction: center;
+
             #mobile {
-                width: inherit;
-                height: inherit;
                 display: flex;
-                flex-direction: column;
+                justify-content: end;
                 align-items: center;
-                justify-content: center;
-                padding-left: 2px;
-                padding-right: 2px;
 
-                .menu-burger,
-                .menu-burger::before,
-                .menu-burger::after {
+                .menu-button {
+                    height: inherit;
+                    display: flex;
+                    flex-direction: column;
+                    justify-content: space-between;
+                    align-items: center;
                     position: relative;
+                    cursor: pointer;
+                    z-index: 20;
+
+                    .menu-burger {
+                        display: flex;
+                        flex-direction: column;
+                        justify-content: center;
+                        align-items: center;
+                        gap: 4px;
+                        width: 30px;
+                        height: 20px;
+
+                        .line {
+                            margin: 0;
+                            padding: 0;
+                            width: 100%;
+                            height: 4px;
+                            background-color: $background-blue-neutral;
+
+                            &:nth-child(even) {
+                                padding-left: 2px;
+                            }
+
+                            transition: 
+                                opacity 1.5s ease,
+                                transform 1s ease;
+                        }
+                    }
+                    .menu-text {
+                        margin: 8px 0 0;
+                        font-size: 14px;
+                        color: $background-blue-neutral;
+                    }
+                }
+
+                .menu-button.is-open .menu-burger .line {
+                    &:first-child {
+                        transform: translateY(8px) rotate(45deg);
+                    }
+                    &:nth-child(even) {
+                        opacity: 0;
+                        transform: rotate(45deg);
+                    }
+                    &:last-child {
+                        transform: translateY(-8px) rotate(135deg);
+                    }
+                }
+
+                .menu-display {
+                    position: fixed;
+                    left: -150%;
+                    top: 0;
                     width: 100%;
-                    height: 6px;
-                    background-color: #616161;
-                }
+                    padding-right: 1000px;
+                    height: 100%;
+                    background-color: transparent;
+                    transition: left 0.5s ease, background-color 0.5s ease;
 
-                .menu-burger::before {
-                    content: '';
-                    top: -8px;
-                }
+                    &.is-open {
+                        left: 0;
+                        background-color: rgba(0, 0, 0, 0.95);
+                    }
+                    
+                    .menu-background {
+                        position: relative;
+                        transform-origin: top right;
+                        width: 120%;
+                        height: 150%;
+                        transform: rotate(20deg);
+                        background-color: $background-secondary;
+                        opacity: 1;
+                        transition: opacity 0.5s ease;
 
-                .menu-burger::after {
-                    content: '';
-                    top: 8px;
+                        .menu-display:not(.is-open) & {
+                            background-color: transparent;
+                            opacity: 0;
+                        }
+                    
+                        ul {
+                            display: flex;
+                            flex-direction: column;
+                            height: inherit;
+                            align-items: flex-end;
+                            justify-content: center;
+                            gap: 50px;
+                            color: $text-primary-color;
+                            z-index: 20;
+                            transform: translateX(-75px) translateY(-300px);
+                            transition: transform 0.5s ease;
+
+                            .menu-display:not(.is-open) & {
+                                transform: translateX(-100%);
+                            }
+
+                            li {
+                                font-size: larger;
+                                transform: rotate(-20deg);
+                            }
+                        }
+                    }
                 }
             }
+
             // #mobile .container {
             //     .main-nav {
             //         position: absolute;
