--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -158,7 +158,7 @@ h3,
 h4,
 h5,
 h6 {
-  color: rgb(246, 246, 246);
+  color: rgb(218, 218, 218);
 }
 
 span.focus-big {
@@ -204,6 +204,7 @@ span.focus-normal {
   p {
     font-size: 22px;
     margin-bottom: 0.6rem;
+    line-height: 1.3rem;
   }
 }
 body {
@@ -512,7 +513,7 @@ header, main, footer {
   }
   main .banner div .about-me p.name {
     color: #1D71B8;
-    background-color: white;
+    background-color: rgb(218, 218, 218);
     padding: 10px 20px;
   }
   main .banner div .my-picture {
@@ -524,8 +525,8 @@ header, main, footer {
   main .banner div .my-picture img {
     width: 100%;
     height: 100%;
-    max-height: 400px; /* Fill the container's height */
+    max-height: 400px;
     -o-object-fit: contain;
-       object-fit: contain; /* Maintains aspect ratio, potentially crops */
+       object-fit: contain;
   }
 }/*# sourceMappingURL=app.css.map */
