--- a/resources/css/app.scss
+++ b/resources/css/app.scss
@@ -369,7 +369,7 @@ header, main, footer {
                     
                     p.name {
                         color: $secondary;
-                        background-color: white;
+                        background-color: rgb(218, 218, 218);
                         padding: 10px 20px;
                     }
                 }
@@ -384,8 +384,8 @@ header, main, footer {
                     img {
                         width: 100%;
                         height: 100%; 
-                        max-height: 400px;/* Fill the container's height */
-                        object-fit: contain; /* Maintains aspect ratio, potentially crops */
+                        max-height: 400px;
+                        object-fit: contain;
                     }
                 }
             }
