--- a/resources/css/__text.scss
+++ b/resources/css/__text.scss
@@ -1,3 +1,16 @@
+@font-face{
+    font-family:'Knewave';
+    src: url('../fonts/Knewave/Knewave-Regular.ttf');
+}
+@font-face{
+    font-family:'londrina-outline';
+    src: url('../fonts/Londrina_Outline/LondrinaOutline-Regular.ttf');
+}
+@font-face{
+    font-family:'londrina-solid';
+    src: url('../fonts/Londrina_Solid/LondrinaSolid-Regular.ttf');
+}
+
 $family : sans-serif;
 
 $primary: #2899E5;
