--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -150,6 +150,18 @@ textarea {
     scroll-behavior: auto !important;
   }
 }
+@font-face {
+  font-family: "Knewave";
+  src: url("../fonts/Knewave/Knewave-Regular.ttf");
+}
+@font-face {
+  font-family: "londrina-outline";
+  src: url("../fonts/Londrina_Outline/LondrinaOutline-Regular.ttf");
+}
+@font-face {
+  font-family: "londrina-solid";
+  src: url("../fonts/Londrina_Solid/LondrinaSolid-Regular.ttf");
+}
 /* setting default text styling for mobile and desktop */
 p,
 h1,
@@ -371,6 +383,20 @@ header, main, footer {
   main section.show {
     opacity: 1;
   }
+  main .hero {
+    max-width: inherit;
+  }
+  main .hero h1 {
+    font-size: 4rem;
+  }
+  main .hero h1 #first-name {
+    font-family: "londrina-outline";
+  }
+  main .hero h1 #last-name {
+    font-family: "londrina-solid";
+    color: #2899E5;
+    margin-left: 4rem;
+  }
   main .banner .about-me {
     width: 100%;
   }
@@ -489,20 +515,36 @@ header, main, footer {
     align-items: center;
   }
   main section {
+    width: 100%;
+    max-width: 900px;
     margin-top: 50px;
     margin-bottom: 100px;
     display: flex;
     flex-wrap: wrap;
-    justify-content: center;
+    align-items: start;
+    justify-content: start;
     opacity: 0;
     transition: opacity 0.8s;
   }
   main section.show {
     opacity: 1;
   }
+  main .hero {
+    max-width: inherit;
+  }
+  main .hero h1 {
+    font-size: 8rem;
+  }
+  main .hero h1 #first-name {
+    font-family: "londrina-outline";
+  }
+  main .hero h1 #last-name {
+    font-family: "londrina-solid";
+    color: #2899E5;
+    margin-left: 4rem;
+  }
   main .banner h1 {
     text-align: center;
-    width: 100%;
   }
   main .banner div {
     display: flex;
@@ -528,5 +570,15 @@ header, main, footer {
     max-height: 400px;
     -o-object-fit: contain;
        object-fit: contain;
+  }
+  main .tech fieldset {
+    width: 100%;
+    border: 2px solid #2899E5;
+    border-radius: 5px;
+    padding: 10px;
+  }
+  main .tech fieldset legend h2 {
+    padding-left: 5px;
+    padding-right: 5px;
   }
 }/*# sourceMappingURL=app.css.map */
