--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -184,12 +184,15 @@ span.focus-normal {
 }
 
 /* For mobile: */
-@media only screen and (max-width: 767px) {
+@media only screen and (max-width: 768px) {
   html {
     font-size: 18px;
   }
+  body main .hero h1 {
+    font-size: clamp(2rem, 10vw, 8rem);
+  }
   h1 {
-    font-size: 30px;
+    font-size: 10vw;
   }
   h2 {
     font-size: 24px;
@@ -201,7 +204,7 @@ span.focus-normal {
   }
 }
 /* For desktop: */
-@media only screen and (min-width: 768px) {
+@media only screen and (min-width: 769px) {
   html {
     font-size: 22px;
   }
@@ -230,7 +233,9 @@ body {
   align-items: center;
 }
 
-header, main, footer {
+header,
+main,
+footer {
   width: 95%;
   padding: 20px 10px;
   background-color: #080e18;
@@ -384,18 +389,39 @@ header, main, footer {
     opacity: 1;
   }
   main .hero {
-    max-width: inherit;
+    display: flex;
+    flex-direction: row;
+    justify-content: space-around;
+    flex-wrap: nowrap;
   }
   main .hero h1 {
-    font-size: 4rem;
+    display: flex;
+    flex-wrap: wrap;
+    max-width: 40%;
+    align-items: center;
   }
   main .hero h1 #first-name {
     font-family: "londrina-outline";
   }
   main .hero h1 #last-name {
     font-family: "londrina-solid";
-    color: #2899E5;
-    margin-left: 4rem;
+    background: linear-gradient(20deg, #1D71B8, #2899E5);
+    -webkit-background-clip: text;
+    background-clip: text;
+    -webkit-text-fill-color: transparent;
+    margin-left: 3rem;
+  }
+  main .hero .my-picture {
+    max-width: 40%;
+    flex-shrink: 0;
+  }
+  main .hero .my-picture img {
+    width: auto;
+    height: auto;
+    max-width: 100%;
+    max-height: 100%;
+    -o-object-fit: contain;
+       object-fit: contain;
   }
   main .banner .about-me {
     width: 100%;
@@ -405,19 +431,15 @@ header, main, footer {
     background-color: white;
     padding: 10px 20px;
   }
-  main .banner .my-picture {
-    width: 100%;
-  }
-  main .banner .my-picture img {
-    width: 100%;
-  }
   footer {
     border-radius: 0 0 5px 5px;
   }
 }
 /* For desktop: */
 @media only screen and (min-width: 768px) {
-  header, main, footer {
+  header,
+  main,
+  footer {
     padding: 20px 50px;
     width: 100%;
     max-width: 2000px;
@@ -531,17 +553,38 @@ header, main, footer {
   }
   main .hero {
     max-width: inherit;
+    display: flex;
+    flex-wrap: nowrap;
+    justify-content: space-around;
+    align-items: center;
   }
   main .hero h1 {
     font-size: 8rem;
+    display: flex;
+    flex-wrap: wrap;
+    width: 450px;
   }
   main .hero h1 #first-name {
     font-family: "londrina-outline";
   }
   main .hero h1 #last-name {
     font-family: "londrina-solid";
-    color: #2899E5;
+    background: linear-gradient(20deg, #1D71B8, #2899E5);
+    -webkit-background-clip: text;
+    background-clip: text;
+    -webkit-text-fill-color: transparent;
     margin-left: 4rem;
+  }
+  main .hero .my-picture {
+    margin-left: 100px;
+  }
+  main .hero .my-picture img {
+    width: auto;
+    height: auto;
+    max-width: 100%;
+    max-height: 400px;
+    -o-object-fit: contain;
+       object-fit: contain;
   }
   main .banner h1 {
     text-align: center;
@@ -551,25 +594,11 @@ header, main, footer {
   }
   main .banner div .about-me {
     max-width: 450px;
-    width: 100%;
   }
   main .banner div .about-me p.name {
     color: #1D71B8;
     background-color: rgb(218, 218, 218);
     padding: 10px 20px;
-  }
-  main .banner div .my-picture {
-    display: flex;
-    justify-content: end;
-    width: 100%;
-    margin-left: 100px;
-  }
-  main .banner div .my-picture img {
-    width: 100%;
-    height: 100%;
-    max-height: 400px;
-    -o-object-fit: contain;
-       object-fit: contain;
   }
   main .tech fieldset {
     width: 100%;
