--- a/resources/css/app.scss
+++ b/resources/css/app.scss
@@ -235,14 +235,38 @@ footer {
             }
         }
 
-        .banner {
-            .about-me {
-                width: 100%;
+        .info {
+            .desktop.slider {
+                display: none;
+            }
 
-                p.name {
-                    color: $secondary;
+            .mobile.accordion-menu {
+                .accordion {
+                    background-color: #eee;
+                    color: $text-primary-color;
+                    cursor: pointer;
+                    padding: 18px;
+                    width: 100%;
+                    border: 1px solid $background-secondary;
+                    text-align: left;
+                    outline: none;
+                    transition: 0.4s;
+
+                    &:focus {
+                        border: 2px solid $primary;
+                    }
+                    &:hover {
+                        background-color: #ccc; 
+                    }
+                }
+                .active, .accordion:hover {
+                    background-color: #ccc; 
+                }
+                .panel {
+                    padding: 0 18px;
+                    display: none;
                     background-color: white;
-                    padding: 10px 20px;
+                    overflow: hidden;
                 }
             }
         }
@@ -438,20 +462,51 @@ footer {
             }
         }
 
-        .banner {
-            h1 {
-                text-align: center;
+        .info {
+            display: flex;
+            flex-direction: column;
+
+            .mobile.accordion-menu  {
+                display: none;
             }
-
-            div {
+            .desktop.slider {
+                width: 100%;
                 display: flex;
-                .about-me {
-                    max-width: 450px;
+                flex-wrap: nowrap;
+                justify-content: space-between;
 
-                    p.name {
-                        color: $secondary;
-                        background-color: rgb(218, 218, 218);
-                        padding: 10px 20px;
+                .slider-menu {
+                    width: 100%;
+                    max-width: 35%;
+                    li {
+                        width: 100%;
+                        margin-top: 0.5rem;
+                        margin-bottom: 0.5rem;
+
+                        &.active {
+                            color: $secondary;
+                            background-color: rgb(218, 218, 218);
+                            padding: 10px 20px;
+                        }
+                    }
+                }
+
+                .slider-content {
+                    width: 55%;
+                    position: relative;
+                    article {
+                        
+                        position: absolute;
+                        top: 0;
+                        left: 0;
+                        opacity: 0;
+                        visibility: hidden;
+                        transition: opacity 0.3s ease, visibility 0.3s ease;
+
+                        &.active {
+                            opacity: 1;
+                            visibility: visible;
+                        }
                     }
                 }
             }
